force-app/main/default/objects/Payment_schedule__c/fields/Amount1__c.field-meta.xml
<CustomField>
    <fullName>Amount1__c</fullName>
    <formula>/* Payment_percent__c * Quote__r.Total_Consideration_with_taxes_and_other__c
Payment_percent__c *  Quote__r.Agreement_Value_Before_GST__c*/

IF(
Is_Clubhouse_Charges__c, Quote__r.Clubhouse_Charges__c,
IF(Is_Infrastructure_Charges__c, Quote__r.Total_Infrastructure_Charges__c,
IF(Is_Maintenance_Charges__c, Quote__r.Total_Maintenance_Amount__c,
IF(
Booking__r.RecordType.DeveloperName != &quot;Plots&quot;,
Payment_percent__c * Quote__r.GRAND_TOTAL__c,
Booking__r.Agreement_Value__c * Payment_percent__c
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>