force-app/main/default/objects/Payment_schedule__c/fields/AmountB__c.field-meta.xml
<CustomField>
    <fullName>AmountB__c</fullName>
    <formula>IF(
  Is_Clubhouse_Charges__c, Booking__r.Clubhouse_Charges__c,
  IF(Is_Infrastructure_Charges__c, Booking__r.Total_Infrastructure_Charges__c,
    IF(Is_Maintenance_Charges__c, Booking__r.Total_Maintenance_Amount__c,
      IF(
        Booking__r.RecordType.DeveloperName &lt;&gt; &apos;Plots&apos;,
        Payment_percent__c * Quote__r.GRAND_TOTAL__c,
										(Booking__r.Agreement_Value__c - Booking__r.Total_Infrastructure_Charges__c) * Payment_percent__c)))
     
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AmountB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>