force-app/main/default/objects/Payment_schedule__c/fields/Basic_Price_Amount__c.field-meta.xml
<CustomField>
    <fullName>Basic_Price_Amount__c</fullName>
    <formula>Booking__r.Agreement_Value__c *Payment_percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Basic Price Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>