force-app/main/default/objects/Payment_schedule__c/fields/Due_Date_Extension__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Extension__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Due Date Extension (in days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>