force-app/main/default/objects/Payment_schedule__c/fields/Interest_Pending_Amount__c.field-meta.xml
<CustomField>
    <fullName>Interest_Pending_Amount__c</fullName>
    <formula>Total_Interest_Amount__c  - Interest_Paid__c -  Waive_Off_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Pending Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>