force-app/main/default/objects/Payment_schedule__c/fields/Interest_Up_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Up_to_Date__c</fullName>
    <label>Interest Up to Date</label>
    <summarizedField>Interest_Amount_Line_Item__c.Interest_Amount__c</summarizedField>
    <summaryForeignKey>Interest_Amount_Line_Item__c.Payment_schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>