force-app/main/default/objects/Payment_schedule__c/fields/Is_New_Data_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Is_New_Data_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is New Data Uploaded</label>
    <type>Checkbox</type>
</CustomField>