force-app/main/default/objects/Payment_schedule__c/fields/Milestone_Amount_Without_GST__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Amount_Without_GST__c</fullName>
    <formula>Booking__r.Agreement_Value__c * Payment_percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Amount Without GST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>