force-app/main/default/objects/Payment_schedule__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <label>Payment Date</label>
    <summarizedField>Receipt_Line_Item__c.CreatedDate</summarizedField>
    <summaryForeignKey>Receipt_Line_Item__c.Payment_schedule__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>