force-app/main/default/objects/Payment_schedule__c/fields/PaymentDueDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDueDate__c</fullName>
    <formula>/*Master_Payment_Schedule__r.Completed_Date__c*/  Demanded_Date__c + (15 + Due_Date_Extension__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Due Date</label>
    <type>Date</type>
</CustomField>