force-app/main/default/objects/Payment_schedule__c/fields/Pre_Termination_Mail_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Termination_Mail_Date__c</fullName>
    <formula>If(Booking__r.Name == &apos;B-392&apos;,today(), Demanded_Date__c +42)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre Termination Mail Date</label>
    <type>Date</type>
</CustomField>