force-app/main/default/objects/Payment_schedule__c/fields/Tentative_TimeLine__c.field-meta.xml
<CustomField>
    <fullName>Tentative_TimeLine__c</fullName>
    <label>Tentative TimeLine</label>
    <length>220</length>
    <type>Text</type>
</CustomField>