force-app/main/default/objects/Payment_schedule__c/fields/Total_Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Amount__c</fullName>
    <formula>Interest_Up_to_Date__c +  Interest_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Interest Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>