force-app/main/default/objects/Payment_schedule__c/fields/Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number__c</fullName>
    <formula>Booking__r.Unit_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Number</label>
    <type>Text</type>
</CustomField>