force-app/main/default/objects/Payment_schedule__c/fields/Waive_Off_Amount__c.field-meta.xml
<CustomField>
    <fullName>Waive_Off_Amount__c</fullName>
    <label>Waive Off Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>