force-app/main/default/objects/Payment_schedule__c/fields/X1st_Interest_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Interest_Reminder_Date__c</fullName>
    <formula>If(Booking__r.Name == &apos;B-397&apos;,today(), Demanded_Date__c +21)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1st Interest Reminder Date</label>
    <type>Date</type>
</CustomField>