force-app/main/default/objects/Payment_schedule__c/fields/X2nd_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Reminder_Date__c</fullName>
    <formula>If(Booking__r.Name == &apos;B-396&apos;,today(), Demanded_Date__c +14)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2nd Reminder Date</label>
    <type>Date</type>
</CustomField>