force-app/main/default/objects/Payment_schedule__c/fields/X3rd_Interest_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Interest_Reminder_Date__c</fullName>
    <formula>If(Booking__r.Name == &apos;B-399&apos;,today(), Demanded_Date__c +35)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3rd Interest Reminder Date</label>
    <type>Date</type>
</CustomField>